Fix overlap of picture buttons on the sidebar

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     margin: 0%;
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 6% 8%  43% 43%;
+    grid-template-rows: minmax(55px, 6%) 8%  43% 43%;
     overflow: auto;
 }
 
@@ -62,13 +62,13 @@ header {
     grid-area: 2 / 1 / 5 / 2;
     background-color: #0ea5e9;
     display: grid;
-    grid-template-rows: 34% 33% 33%;
+    grid-template-rows: minmax(220px, 34%) minmax(120px, 33%) minmax(0px, 33%);
     gap: 40px;
 }
 
 #navigation, #settings {
     display: grid;
-    grid-template-columns: 1fr 6fr;
+    grid-template-columns: minmax(50px,1fr) 6fr;
     grid-template-rows: repeat(auto-fill, 40px);
     height: 100%;
     align-items: center;
